--- a/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
+++ b/client-myjss/src/app/modules/quotation/components/notice-template/notice-template.component.html
@@ -6,9 +6,9 @@
 
         <!--============== GENERIC BLOC ===============-->
         <!-- Block title -->
-        <h6>Champs génériques</h6>
+        <h6>Champs de l'annonce</h6>
 
-        <div class="row row-cols-3 g-3">
+        <div class="row row-cols-1 row-cols-lg-3 g-3">
 
           <!-- Loop over placeholder entries -->
           <div class="col" *ngFor="let placeholder of placeholdersMap.get('#')">
