--- a/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
+++ b/client-myjss/src/app/modules/my-account/components/billing-closure/billing-closure.component.html
@@ -35,6 +35,12 @@
           De la plus ancienne à la plus récente
           <i class="ai-check me-2" *ngIf="currentSort=='createdDateAsc'"></i>
         </a>
+        <a class="dropdown-item" style="cursor: pointer;"
+          (click)="changeSort('createdDateDesc');$event.stopPropagation();">
+          <i class="ai-time me-2"></i>
+          De la plus récente à la plus ancienne
+          <i class="ai-check me-2" *ngIf="currentSort=='createdDateDesc'"></i>
+        </a>
         <a class="dropdown-item" style="cursor: pointer;" (click)="changeSort('byAffaire');$event.stopPropagation();">
           <i class="ai-time me-2"></i>
           Par affaire
@@ -87,7 +93,8 @@
 
     <div class="table-responsive" *ngIf="!isFirstLoading">
 
-      <div *ngIf="currentSort=='createdDateAsc' && receiptValues && receiptValues.length>0">
+      <div
+        *ngIf="(currentSort=='createdDateAsc' || currentSort=='createdDateDesc') && receiptValues && receiptValues.length>0">
         <div *ngFor="let receiptValue of receiptValues" class="card mb-3 shadow-sm">
           <div class="card-body p-3">
             <div class="d-flex justify-content-between mb-2 flex-wrap">
