--- a/client-myjss/src/app/modules/my-account/components/overview/overview.component.css
+++ b/client-myjss/src/app/modules/my-account/components/overview/overview.component.css
@@ -121,3 +121,9 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   position: relative;
   z-index: 1;
 }
+
+
+.stat-card {
+  min-height: 170px;
+  cursor: pointer;
+}
