--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -201,11 +201,11 @@
   <div *ngIf="quotation && quotation.assoAffaireOrders && quotation.assoAffaireOrders[0] && quotation.assoAffaireOrders[0].services
           && quotation.assoAffaireOrders[0].services[0] && quotation.assoAffaireOrders[0].services[0]
           && !isServiceJssSubscription(quotation.assoAffaireOrders[0].services[0].serviceTypes[0])"
-    class="position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 mt-3 d-flex justify-content-between align-items-center z-3">
-    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center"
+    class="position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 d-flex justify-content-between align-items-center z-1030">
+    <button type="button" class="btn btn-secondary rounded-1 mx-0 mx-sm-5 d-flex align-items-center"
       (click)="goBackQuotation()">
-      <i class="ai-arrow-left"></i>
-      <span class="d-none d-sm-inline ms-2">Étape précédente</span>
+      <i class="ai-arrow-left d-none d-sm-inline"></i>
+      <span class="ms-2 ms-lg-2">Étape précédente </span>
     </button>
   </div>
 </div>
