--- a/client/src/app/modules/dashboard/components/save-current-view-dialog/save-current-view-dialog.component.html
+++ b/client/src/app/modules/dashboard/components/save-current-view-dialog/save-current-view-dialog.component.html
@@ -1,5 +1,5 @@
 <div class=" form-div">
   <generic-input [(model)]="viewLabel" label="Nom de la vue" [form]="kanbanForm" propertyName="viewLabel"
     [isMandatory]="true" [isDisabled]="false" [displayClearField]="false"></generic-input>
-  <button mat-raised-button color="accent" (click)="onConfirm()">Sauvegarder la vue</button>
+  <button mat-raised-button color="accent" (click)="onConfirm()" style="margin-top: 2rem;">Sauvegarder la vue</button>
 </div>
