--- a/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
@@ -223,7 +223,7 @@
                             <span class="placeholder placeholder-sm col-4"></span>
                           </p>
                         </div>
-                        <button type="button" class="btn btn-link btn-sm px-0 mt-2"
+                        <button type="button" class="btn btn-link btn-sm px-2 mt-2 hover-bg-light "
                           (click)="openOrderDetails($event, order); $event.stopPropagation();">
                           <i class="ai-file-text me-2"></i>Détails de la commande
                         </button>
