--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="d-flex align-items-center mb-4" *ngIf="userScope && userScope.length>1 && currentUser">
-          <div class="ms-auto">
+          <div>
             <div ngbDropdown class="btn-group dropdown" style="margin-right: 10px;">
               <button type="button" class="btn btn-secondary dropdown-toggle" ngbDropdownToggle aria-haspopup="true"
                 aria-expanded="false">
@@ -638,6 +638,7 @@
   <div class="row">
     <div class="col-12 px-0">
       <div class="card shadow px-4 ms-lg-5 pt-1" *ngIf="quotation">
+        <h4 class="pt-3">{{quotation.isQuotation ? 'Devis' : 'Commande'}}</h4>
         <!-- Items -->
         <div *ngFor="let asso of quotation.assoAffaireOrders; let assoIndex = index">
           <div *ngFor="let service of asso.services; let serviceIndex = index" class="row">
