--- a/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
+++ b/client/src/app/modules/quotation/components/quotation-management/quotation-management.component.html
@@ -90,6 +90,13 @@
                       propertyName="isResponsableOnBilling"></generic-toggle>
                   </td>
                 </tr>
+                <tr>
+                  <td>
+                    <generic-toggle [(model)]="billingDocument.isCbLinkDisabled"
+                      label="Désactiver le QR code de paiement ?" [form]="quotationManagementForm"
+                      propertyName="isCbLinkDisabled"></generic-toggle>
+                  </td>
+                </tr>
               </table>
               <table class="full-width">
                 <tr>
