--- a/client/src/app/modules/dashboard/components/provision-affectation-kanban/provision-affectation-kanban.component.html
+++ b/client/src/app/modules/dashboard/components/provision-affectation-kanban/provision-affectation-kanban.component.html
@@ -86,7 +86,7 @@
   </div>
 </ng-container>
 
-<div class="mat-elevation-z2 form-div " *ngIf="canAddAssignOrderForProduction()">
+<div class="mat-elevation-z2 form-div ">
   <div class=" full-width">
     <sort-table [columns]="displayedColumns" [values]="assignationStatistics" tableName="Statistiques d'assignation"
       [noMaxHeight]="false" [noPaddingBottom]="false" [isSmallerHeight]="false"
