--- a/src/main/resources/mails/templates/customer-order-in-progress.html
+++ b/src/main/resources/mails/templates/customer-order-in-progress.html
@@ -210,14 +210,8 @@
                                                                 <p>Bonjour <span th:text="${customerName}"></span>,</p>
                                                                 <p>Nous vous confirmons le traitement de votre commande.
                                                                 </p>
-                                                                <p>Elle sera traitée dans les meilleurs délais par <span
-                                                                        th:text="${customerOrder.assoAffaireOrders[0].provisions[0].assignedTo.firstname}"></span>
-                                                                    <span
-                                                                        th:text="${customerOrder.assoAffaireOrders[0].provisions[0].assignedTo.lastname}"></span>
-                                                                    (<span
-                                                                        style="color:rgb(35, 61, 86);; text-decoration:none"><span
-                                                                            th:text="${customerOrder.assoAffaireOrders[0].provisions[0].assignedTo.mail}"></span></span>)
-                                                                    et toute son équipe.
+                                                                <p>Elle sera traitée dans les meilleurs délais par nos
+                                                                    équipes.
                                                                 </p>
                                                                 <p>Sauf avis contraire et immédiat de votre part, la
                                                                     facture sera établie au nom de <span
@@ -225,10 +219,18 @@
                                                                     à l'adresse <span
                                                                         th:text="${invoiceLabelResult.billingLabelAddress}"></span>,
                                                                     <span
-                                                                        th:text="${invoiceLabelResult.billingLabelCity.label}"></span>,
-                                                                    et sera transmise, à l'adresse suivante <span
-                                                                        style="color:rgb(35, 61, 86);; text-decoration:none"><span
-                                                                            th:text="${mailComputeResultInvoice.recipientsMailTo[0].mail}"></span></span>
+                                                                        th:text="${invoiceLabelResult.billingLabelCity.label}"></span>
+                                                                    <span th:if="${mailComputeResultInvoice!=null}">, et
+                                                                        sera transmise, à l'adresse suivante <span
+                                                                            style="color:rgb(35, 61, 86);; text-decoration:none"><span
+                                                                                th:text="${mailComputeResultInvoice.recipientsMailTo[0].mail}"></span></span></span>
+                                                                    <span th:if="${mailComputeResultInvoice==null}">.
+                                                                        <strong>
+                                                                            Nous n'avons pas votre adresse mail de
+                                                                            transmission de la facture, merci de nous la
+                                                                            fournir.
+                                                                        </strong>
+                                                                    </span>
                                                                 </p>
                                                             </td>
                                                         </tr>
