--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -913,6 +913,14 @@
           </tr>
           <tr>
             <td>
+              <select-active-directory-group [(model)]="constant.activeDirectoryGroupDirection"
+                label="Groupe Active Directory - Direction" [form]="constantForm"
+                propertyName="activeDirectoryGroupDirection" [isMandatory]="true"
+                [isDisabled]="!editMode"></select-active-directory-group>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-active-directory-group [(model)]="constant.activeDirectoryGroupFacturation"
                 label="Groupe Active Directory - Facturation" [form]="constantForm"
                 propertyName="activeDirectoryGroupFacturation" [isMandatory]="true"
