--- a/client/src/app/modules/dashboard/components/order-kaban/order-kaban.component.html
+++ b/client/src/app/modules/dashboard/components/order-kaban/order-kaban.component.html
@@ -9,8 +9,8 @@
     (onFormChange)="startFilter()" propertyName="statusSelected" [isMandatory]="false"
     [isDisabled]="false"></select-customer-order-status>
   <select-employee [(model)]="employeesSelected" label="Collaborateur" [form]="kanbanForm"
-    propertyName="employeesSelected" [isMandatory]="false" [isDisabled]="false" [filteredAdGroups]="[adGroupSales]"
-    (onFormChange)="startFilter()"></select-employee>
+    propertyName="employeesSelected" [isMandatory]="false" [isDisabled]="false"
+    [filteredAdGroups]="[adGroupSales,directionGroupSales]" (onFormChange)="startFilter()"></select-employee>
 </div>
 
 <div class="kanban-container top-container">
